--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linktree Hacker Theme</title>
+    <title>raxor.cy</title>
     <style>
         /* Global Styling */
         body {
@@ -120,7 +120,7 @@
         <!-- Button Links -->
         <a href="https://wa.me/6281374383083" class="btn" target="_blank">MY WHATSAPP CONTACT</a>
         <a href="https://chat.whatsapp.com/EdVejOSrDjd2ZCFefg0Spv" class="btn" target="_blank">JOIN MY WHATSAPP GROUP</a>
-        <a href="https://youtube.com/@mr_raxor" class="btn" target="_blank">SUBSCRIBE MY YOUTUBE CHANNEL </a>
+        <a href="https://youtube.com/@mr_raxor" class="btn" target="_blank">SUBSCRIBE MY YOUTUBE</a>
 
         <!-- Footer -->
         <div class="footer">
